--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -197,8 +197,10 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">16sp</item>
     </style>
+
     <style name="MultipleStatusView"/>
 
+    <!--文本style-->
     <style name="MultipleStatusView.Content">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -208,6 +210,7 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <!--loadingview-->
     <style name="AVLoadingIndicatorView">
         <item name="minWidth">48dp</item>
         <item name="maxWidth">48dp</item>
